@@ -3,6 +3,9 @@
 	* tests/test-pokeravatar.py.in
 	(PokerAvatarTestCase.loseConnection): Wrote function.
 	(PokerAvatarTestCase.test44_possibleObserverLoggedIn): Wrote function.
+	(PokerAvatarTestCase.test45_possibleObserverLoggedInWithAnte):
+	Wrote function.
+	(PokerAvatarTestCase.loseConnectionAnte): Wrote function.
 
 2008-02-25  Loic Dachary <loic@dachary.org>
 
